--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@uiw/react-codemirror": "^4.22.1",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
+    "cloudinary": "^1.41.3",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
